--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -18,7 +18,7 @@
 		gap: 32px;
 
 		@include bt {
-			grid-template-columns: 2fr repeat(3, 1fr);
+			grid-template-columns: repeat(4, 1fr);
 		}
 
 		@include t {
@@ -30,12 +30,16 @@
 		}
 
 		@include xsm {
-			grid-template-columns: 1fr;
+			// grid-template-columns: 1fr;
 		}
 	}
 
 	// .footer__top
 	&__top {
+		@include bt {
+			grid-row: 1/2;
+			grid-column: 1/3;
+		}
 	}
 
 	// .footer__logo
@@ -51,6 +55,22 @@
 	// .footer__list
 	&__list {
 		@include list;
+
+		@include bt {
+			grid-row: 2/3;
+		}
+
+		@include t {
+			&:last-child {
+				grid-row: 3/4;
+			}
+		}
+
+		@include m {
+			&:nth-child(3) {
+				grid-row: 3/4;
+			}
+		}
 	}
 
 	// .footer__li
